# quantmashup

./: README.md  conf.py  index.html  index.rst  pyproject.toml
.doctrees/: environment.pickle  index.doctree
.doctrees/blog/2022-10/: 2022-10-01-first-post.doctree
_website/: .buildinfo  blog.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
_website/.doctrees/: environment.pickle  index.doctree
_website/.doctrees/blog/: about.doctree
_website/.doctrees/blog/2022-10/: 2022-10-01-first-post.doctree  2022-10-02-first-post.doctree
_website/_sources/: index.rst.txt
_website/_sources/blog/: about.rst.txt
_website/_sources/blog/2022-10/: 2022-10-01-first-post.rst.txt
_website/blog/: 2022.html  about.html  archive.html  atom.xml  author.html  category.html  drafts.html  index.html  tag.html
_website/blog/2022/: index.html
_website/blog/2022-10/: 2022-10-01-first-post.html  2022-10-02-first-post.html
_website/blog/2022-10/2022-10-01-first-post/: index.html
_website/blog/2022-10/2022-10-02-first-post/: index.html
_website/blog/about/: index.html
_website/blog/archive/: index.html
_website/blog/author/: index.html  tian-zeyu.html
_website/blog/author/tian-zeyu/: index.html
_website/blog/category/: chores.html  index.html
_website/blog/category/chores/: index.html
_website/blog/drafts/: index.html
_website/blog/tag/: ablog.html  atag.html  index.html
_website/blog/tag/ablog/: index.html
_website/genindex/: index.html
_website/search/: index.html
blog/2022-10/: 2022-10-02-first-post.md
(+1 files in other folders)
