[tool.poetry]
name = "quantmashup"
version = "0.1.0"
description = ""
authors = ["Zeyu Tian <olivandertian@yahoo.com>"]
readme = "./blog/2022-10/2022-10-01-first-post.rst"
packages = []

[tool.poetry.dependencies]
python = "^3.7"
ablog = "^0.10.29"
sphinx-autobuild = "^2021.3.14"
myst-parser = "^0.18.1"
sphinx-rtd-theme = "^1.0.0"
sphinxcontrib-napoleon = "^0.7"
sphinx-autodoc-typehints = "^1.19.4"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"